syntax = "proto3";
option java_multiple_files = true;
option java_package = "disruptor.protobuf";
package disruptor.protobuf;

message PingRequest { int64 timestamp = 1; }

message PingResponse {
    int64 timestamp = 1;
    string system_name = 2;
}

service PingService{
  rpc ping(PingRequest) returns(PingResponse){}

  rpc pingWithDisruptor(PingRequest) returns(PingResponse){}

}
